[gd_scene load_steps=3 format=3 uid="uid://drm6cg3ek7yy5"]

[ext_resource type="Script" path="res://scripts/TestDialogue.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="TestDialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.8, 1)

[node name="CharacterSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
expand_mode = 1
stretch_mode = 5

[node name="DialogueBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = -50.0
custom_styles/panel = SubResource("1")

[node name="NameLabel" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = -120.0
text = "Nombre"

[node name="DialogueText" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -40.0
bbcode_enabled = true
text = "Texto del diálogo aquí..."
fit_content = true

[node name="ContinueIndicator" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
text = "▼ Continuar"
horizontal_alignment = 2
